config/common/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: control-plane
  labels:
    security.poc.example/control-plane: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: poc-e2e
  labels:
    security.poc.example/e2e: "true"
---
apiVersion: v1
kind: Namespace
metadata:
  name: zone-a
  labels:
    security.poc.example/zone: "true"
    security.poc.example/name: zone-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: zone-b
  labels:
    security.poc.example/zone: "true"
    security.poc.example/name: zone-b
